2008-02-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/msiformat.cpp: Add new support for MSI/Accelrys
	Cerius II files. Still needs a bit of debugging, but works fine on
	single-molecule files.

	* src/formats/Makefile.*: Update for new format.

2008-02-13 Chris Morley
	
	* data/plugindefines.txt: comment out problematic entry
	
	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi:
	update this installer for the multiple DLL build
	
	Update other Windows build files.

2008-02-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/griddata.cpp, include/openbabel/griddata.h: Fix for
	documentation (and code) for GetOriginVector -- return the minimum
	x, y, and z coordinates from the grid.

2008-02-12 Chris Morley

	* src/formats/MCDLFormat.cpp: NEW FILE Converted from his Java code
	by Sergey Trepalin. There is a Java applet viewer and editor for
	this linear format at http://sourceforge.net/projects/mcdl.
	Some of the utility functions have been temporarily shoe-horned
	into this file so there is only one MCDL related file. They will be
	separated when further code for 2D layout from the applet
	becomes available.
	
	* windows-vc2005/OpenBabelOBF.sln: updated
	
2008-02-10  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/grid.cpp: Added extra check to Interpolate() to make sure no
	_val[i] is used when i >= _xdim*_ydim*_zdim, this fixes some craches
	in the Avogadro surface engine. I suspect that larger molecules have
	larger errors in their _xmin, _xmax, _ymin, ... values (error
	propagation) which causes the first check to pass, but still request 
	an invalid _val[i]

2008-02-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/Makefile.am: Make sure to link src/alias.cpp with
	mdlformat.

	* src/Makefile.am: Build alias.cpp with main libopenbabel.

	* src/formats/smilesformat.cpp: Reject SMILES molecules with 0
	atoms. Fixes bug on test suite.
